Modif page 2 Palette

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 					<p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
 				
 					<a href="#restaurants">						
-						<h4 class="btn">Explorer nos restaurants</h4>
+						<h4 class="btn_degr">Explorer nos restaurants</h4>
 					</a>
 				</div>	
 
 			</nav>
 			
-			<section id="fonct_guide"> <!--Ici une petite guide pour l'usager-->	
+			<section class="carte_guide"> <!--Ici une petite guide pour l'usager-->	
 				<h2 class="heading">Fonctionnement</h2>
 				<div class="btn_fonct">
-					<p>1</p>
+					<p class="num">1</p>
 					<div class="btn_icon">
 						<i class="fas fa-mobile-alt"></i>
 					</div>
@@ -48,7 +48,7 @@
 				</div>
 
 				<div class="btn_fonct">
-					<p>2</p>
+					<p class="num">2</p>
 					<div class="btn_icon">
 						<i class="fas fa-list"></i>
 					</div>
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="btn_fonct">
-					<p>3</p>
+					<p class="num">3</p>
 					<div class="btn_icon">
 						<i class="fas fa-store"></i>
 					</div>
