Modif page_palette

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 			</nav>
 			
-			<section class="carte_guide"> <!--Ici une petite guide pour l'usager-->	
+			<section class="carte-guide"> <!--Ici une petite guide pour l'usager-->	
 				<h2 class="heading">Fonctionnement</h2>
 				<div class="btn_fonct">
 					<p class="num">1</p>
