--- a/page_palette.html
+++ b/page_palette.html
@@ -34,7 +34,7 @@
 				</div>
 			</section>
 
-			<section class="carte_guide carte_plats"> <!--Bouton pour choisir les composants du menu -->	
+			<section class="carte-guide carte_plats"> <!--Bouton pour choisir les composants du menu -->	
 				<p class="heading">ENTRÉES</p>
 				<div class="btn_fonct btn_plats">
 					<div class="nom_plats">
