--- a/page_palette.html
+++ b/page_palette.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="stylebase.css" media="all"/>
+		<link rel="stylesheet" href="sass/style.css" media="all"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
@@ -12,72 +12,143 @@
 	</head>
 	
 	<body>
-		<div id="bloc_page">
-            <header><!--Logo et flèche de retour-->
-				<a href="index.html" id="fleche"><i class="fas fa-arrow-left"></i></a>
-				<p class="logo">ohmyfood</p>
+		<div class="bloc-page"><!--En-tête du chacun des menus des restaurants-->
+            <header class="entete"><!--Logo et flèche de retour-->
+				<a href="index.html" class="entete__fleche"><i class="fas fa-arrow-left"></i></a>
+				<p class="entete__logo">ohmyfood</p>
 			</header>
 
-			<section><!--En-tête du chacun des menus des restaurantes-->
-				<div id="photo_resto">
-					<span class="box_general box_resto">
-						<img src="images_accueil/palettedugout.jpg" alt="lapalettedugout"/>
-					</span>
-				</div>
-			
-				<div class="entete">
-					<p class="logo logo_entete">La palette du goût</p>
-			
-					<button type="button" class="heart heart_entete">
-						<i class="far fa-heart"></i>
-					</button>
-				</div>
-			</section>
+			<span class="card__box card__box--modif">
+				<img src="images_accueil/palettedugout.jpg" alt="lapalettedugout"/>
+			</span>
 
-			<section class="carte-guide carte_plats"> <!--Bouton pour choisir les composants du menu -->	
-				<p class="heading">ENTRÉES</p>
-				<div class="btn_fonct btn_plats">
-					<div class="nom_plats">
-						<h3>Fricassée d'escargot</h3>
-						<p>Au primet d'espelette</p>
+			<section class="corps-page">
+				<div class="corps-page__heading">
+					<p class="corps-page__titre">La palette du goût</p>
+			
+					<p class="heart heart--modif"><i class="far fa-heart"></i></p>
+					<p class="heart heart--modif"><i class="fas fa-heart"></i></p>
+				</div>
+				<div class="carte carte--modif">
+					<p class="carte__heading">ENTRÉES</p>
+					<hr />
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Fricassée d'escargot</h3>
+							<p>Au primet d'espelette</p>
+						</div>
+						<h4>25€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
 					</div>
-					<h4>25€</h4>
-					<button type="button" class="check">
-						<i class="fas fa-check-circle"></i>
-					</button>
-
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Foie gras de canard mi-cuit</h3>
+							<p>Et ses copeaux de truffe noire</p>
+						</div>
+						<h4>35€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Oeuf au plat</h3>
+							<p>Assaisonné à la truffe sur lit de ... </p>
+						</div>
+						<h4>20€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
 				</div>
 
-				<div class="btn_fonct btn_plats">
-					<div class="nom_plats">
-						<h3>Foie gras de canard mi-cuit</h3>
-						<p>Et ses copeaux de truffe noire</p>
-					</div>		
+				<div class="carte carte--modif">
+					<p class="carte__heading">PLATS</p>
+					<hr />
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Filet de boeuf aux herbes</h3>
+							<p>Accompagné de sa ribambelle de légu...</p>
+						</div>
+						<h4>40€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Parmentier de queue de boeuf</h3>
+							<p>À la truffe noire sur sa purée de panais</p>
+						</div>
+						<h4>35€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Filet de Turbot</h3>
+							<p>Aux agrumes </p>
+						</div>
+						<h4>44€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
 				</div>
 
-				<div class="btn_fonct btn_plats">
-					<div class="nom_plats">
-						<h3>Oeuf au plat</h3>
-						<p>Assaisonné à la truffe sur lit de </p>
-					</div>		
+				<div class="carte carte--modif">
+					<p class="carte__heading">DESSERTS</p>
+					<hr />
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Paris-Brest</h3>
+							<p>Revisité</p>
+						</div>
+						<h4>18€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Macaron au chocolat d'exception</h3>
+							<p>Et glace à la vanille de Madagascar</p>
+						</div>
+						<h4>22€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
+					<div class="carte__bouton carte__bouton--modif">
+						<div class="card__text">
+							<h3>Mousse au chocolat</h3>
+							<p>Au piment d'espelette et à la truffe noire </p>
+						</div>
+						<h4>23€</h4>
+						<button type="button" class="check">
+							<i class="fas fa-check-circle"></i>
+						</button>
+					</div>
 				</div>
-			</section>
-			
-			
-			<div>
-				<button type="submit" action="#" class="explorer">						
-						<h4 class="btn_degr btn_commande">Commander</h4>
-				</button>
-			</div>
-		
-			<footer>
-				<!--Le pied de page-->
-				<p class="logo logo_mini">ohmyfood</p>
-				<p><a href="#" class="pied"><i class="fas fa-utensils"></i> Proposer un restaurant </a></p>
-				<p><a href="#" class="pied"><i class="fas fa-hands-helping"></i>Devenir partenaire </a></p>
-				<p><a href="#" class="pied">Mentions légales </a></p>
-				<p><a href="mailto:contact@ohmyfoot.fr" class="pied">Contact</a></p>
+
+				
+				<a href="#" role="button" class="bouton">						
+					<h4 class="bouton__text">Commander</h4>
+				</a>
+
+				<footer class="pied"> <!--Le pied de page pour toutes les pages du site-->
+				<p class="pied__logo">ohmyfood</p>
+				<ul class="pied-nav">
+					<li><a href="#" class="pied-nav__lien"><i class="fas fa-utensils"></i> Proposer un restaurant </a></li>
+					<li><a href="#" class="pied-nav__lien"><i class="fas fa-hands-helping"></i>Devenir partenaire </a></li>
+					<li><a href="#" class="pied-nav__lien">Mentions légales </a></li>
+					<li><a href="mailto:contact@ohmyfoot.fr" class="pied-nav__lien">Contact</a></li>
+				</ul>
 			</footer>
+			</section>
 		</div>
 	</body>
 </html>
