--- a/page_palette.html
+++ b/page_palette.html
@@ -26,8 +26,9 @@
 				<div class="corps-page__heading">
 					<p class="corps-page__titre">La palette du goût</p>
 			
-					<p class="heart heart--modif"><i class="far fa-heart"></i></p>
-					<p class="heart heart--modif"><i class="fas fa-heart"></i></p>
+					<span class="heart heart--modif"><i class="far fa-heart vide"></i></span>
+					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
+
 				</div>
 				<div class="carte carte--modif">
 					<p class="carte__heading">ENTRÉES</p>
