Création de pages restaurants

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</a>
 			</div>
 
-			<section class="carte"><!--Petite guide pour l'utilisateur-->
+			<section class="carte"><!--Petite guide pour l'utilisateur avec des boutons principales qui vont s'éclaicir sous le survol du curseur de la souris-->
 				<h2 class="carte__heading">Fonctionnement</h2>
 				<div class="carte__bouton">
 					<p class="carte__text">1</p>
@@ -80,7 +80,7 @@
 				</div>
 				
 				<div class="card__link">
-					<a href="page_noteechantee.html">
+					<a href="page_note.html">
 						<div>
 							<p class="card__new">Nouveau</p>
 							<span class="card__box">
