--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 	</head>
 
 	<body>
+		<div class="loader-container">
+            <div class="loader1"></div>
+            <div class="loader2"></div>
+            <div class="loader3"></div>
+        </div>
 		<div class="block-page">
+			<div class="loader">
+				<div class="loader__spinner"></div>
+			</div>
 			<header class="entete"><!--Pour la page d'accueil-->
 				<p class="entete__logo">ohmyfood</p>
 			</header>
