--- a/page_alafrancaise.html
+++ b/page_alafrancaise.html
@@ -33,7 +33,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Tartare de poulpe acidulé</h3>
 							<p>Aux zests d'orange</p>
@@ -43,7 +43,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Velouté de légumes d'antan</h3>
 							<p>Carotte, panais, topinambour</p>
@@ -53,7 +53,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Soupe à l'oignon</h3>
 							<p>Revisitée </p>
@@ -68,7 +68,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">PLATS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Coquilles Saint-Jacques</h3>
 							<p>Accompagnées d'une purée de panais</p>
@@ -78,7 +78,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Magret de canard</h3>
 							<p>Et parmentier de pommes de terre</p>
@@ -88,7 +88,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Pigeonneau d'Ille-et-Vilaine</h3>
 							<p>Sur son lit de gnocchis aux légumes</p>
@@ -103,7 +103,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Pétales de violettes glacés</h3>
 							<p>Et purée de noisettes</p>
@@ -113,7 +113,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Fondant au chocolat</h3>
 							<p>Revisité</p>
@@ -123,7 +123,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Millefeuille croustillant</h3>
 							<p>Myrtilles et pâté d'amande</p>
