--- a/page_delices.html
+++ b/page_delices.html
@@ -33,7 +33,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Tartare de thon</h3>
 							<p>Assaisonné au yuzu</p>
@@ -43,7 +43,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Bouchée de homard croustillant</h3>
 							<p>Et sa farandole de petits légumes</p>
@@ -53,7 +53,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Velouté de cèpes</h3>
 							<p>Aux truffe</p>
@@ -68,7 +68,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">PLATS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--special">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--special carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Poulet rôti aus herbes <br /> de provence</h3>
 							<p>Et sa crème de truffe</p>
@@ -78,7 +78,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Langouste rôtie</h3>
 							<p>Et ses légumes de saison</p>
@@ -88,7 +88,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Côte de boeuf angus</h3>
 							<p>Et sa puréé de panais</p>
@@ -103,7 +103,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Farandole de desserts</h3>
 							<p>Du chef</p>
@@ -113,7 +113,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Crème brulée</h3>
 							<p>Revisitée</p>
@@ -123,7 +123,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Tiramisu</h3>
 							<p>À la noisette</p>
