--- a/page_note.html
+++ b/page_note.html
@@ -33,7 +33,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Ravioles de foie gras</h3>
 							<p>Accompagnés de leur crème à la truffe</p>
@@ -43,7 +43,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Caviar osciètre</h3>
 							<p>Sur blini à la farine de blé noir</p>
@@ -53,7 +53,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Homard et espuma de ...</h3>
 							<p>Mariné aux zests d'orange </p>
@@ -63,7 +63,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
                     </div>
-                    <div class="carte__bouton carte__bouton--modif">
+                    <div class="carte__bouton carte__bouton--modif carte__bouton--modif--4">
 						<div class="card__text">
 							<h3>Foie gras de canard cuit entier</h3>
 							<p>Confiture de figue et pain toasté</p>
@@ -78,7 +78,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">PLATS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Noix de coquilles Saint-Jacques</h3>
 							<p>Sur lit de purée de céleri-rave</p>
@@ -88,7 +88,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Langoustine poêlée</h3>
 							<p>Purée de patate douce</p>
@@ -98,7 +98,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Mijoté de queue de boeuf</h3>
 							<p>Et riz sauvage aux zests de citron</p>
@@ -113,7 +113,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Macaron noisette et chocolat</h3>
 							<p>Glace au caramel brun et sel de Guérande</p>
@@ -123,7 +123,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Baba au rhum revisité</h3>
 							<p>Avec son coulis de citron</p>
@@ -133,7 +133,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Tarte au citron meringuée</h3>
 							<p>Destructurée</p>
