--- a/page_palette.html
+++ b/page_palette.html
@@ -33,7 +33,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Fricassée d'escargot</h3>
 							<p>Au primet d'espelette</p>
@@ -43,7 +43,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Foie gras de canard mi-cuit</h3>
 							<p>Et ses copeaux de truffe noire</p>
@@ -53,7 +53,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Oeuf au plat</h3>
 							<p>Assaisonné à la truffe sur lit de ... </p>
@@ -68,7 +68,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">PLATS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Filet de boeuf aux herbes</h3>
 							<p>Accompagné de sa ribambelle de légu...</p>
@@ -78,7 +78,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Parmentier de queue de boeuf</h3>
 							<p>À la truffe noire sur sa purée de panais</p>
@@ -88,7 +88,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Filet de Turbot</h3>
 							<p>Aux agrumes </p>
@@ -103,7 +103,7 @@
 				<div class="carte carte--modif">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Paris-Brest</h3>
 							<p>Revisité</p>
@@ -113,7 +113,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
 						<div class="card__text">
 							<h3>Macaron au chocolat d'exception</h3>
 							<p>Et glace à la vanille de Madagascar</p>
@@ -123,7 +123,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif">
+					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Mousse au chocolat</h3>
 							<p>Au piment d'espelette et à la truffe noire </p>
