--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 	<body>
 
-		<div class="loader-container">
-			<div class="loader1"></div>
-			<div class="loader2"></div>
-			<div class="loader3"></div>
+		<div class="loader">
+			<div class="loader__1"></div>
+			<div class="loader__2"></div>
+			<div class="loader__3"></div>
 		</div>
 		
 		<div class="block-page">
