--- a/page_note.html
+++ b/page_note.html
@@ -30,7 +30,7 @@
 					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
 
 				</div>
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--1">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
@@ -55,7 +55,7 @@
 					</div>
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
-							<h3>Homard et espuma de ...</h3>
+							<h3>Homard et espuma de potiron</h3>
 							<p>Mariné aux zests d'orange </p>
 						</div>
 						<h4>20€</h4>
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--2">
 					<p class="carte__heading">PLATS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
@@ -101,7 +101,7 @@
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Mijoté de queue de boeuf</h3>
-							<p>Et riz sauvage aux zests de citron</p>
+							<p>Et riz sauvage aux zestes de citron</p>
 						</div>
 						<h4>44€</h4>
 						<button type="button" class="check">
@@ -110,7 +110,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--3">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
