--- a/page_alafrancaise.html
+++ b/page_alafrancaise.html
@@ -30,13 +30,13 @@
 					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
 
 				</div>
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--1">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Tartare de poulpe acidulé</h3>
-							<p>Aux zests d'orange</p>
+							<p>Aux zestes d'orange</p>
 						</div>
 						<h4>25€</h4>
 						<button type="button" class="check">
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--2">
 					<p class="carte__heading">PLATS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--3">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
