--- a/page_delices.html
+++ b/page_delices.html
@@ -30,7 +30,7 @@
 					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
 
 				</div>
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--1">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--2">
 					<p class="carte__heading">PLATS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--special carte__bouton--modif--1">
@@ -90,7 +90,7 @@
 					</div>
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
-							<h3>Côte de boeuf angus</h3>
+							<h3>Côte de boeuf Angus</h3>
 							<p>Et sa puréé de panais</p>
 						</div>
 						<h4>44€</h4>
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--3">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
