--- a/page_palette.html
+++ b/page_palette.html
@@ -30,13 +30,13 @@
 					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--1">
 					<p class="carte__heading">ENTRÉES</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Fricassée d'escargot</h3>
-							<p>Au primet d'espelette</p>
+							<p>Au piment d'Espelette</p>
 						</div>
 						<h4>25€</h4>
 						<button type="button" class="check">
@@ -56,7 +56,7 @@
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Oeuf au plat</h3>
-							<p>Assaisonné à la truffe sur lit de ... </p>
+							<p>Assaisonné à la truffe sur lit de caviar </p>
 						</div>
 						<h4>20€</h4>
 						<button type="button" class="check">
@@ -65,13 +65,13 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--2">
 					<p class="carte__heading">PLATS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
 						<div class="card__text">
 							<h3>Filet de boeuf aux herbes</h3>
-							<p>Accompagné de sa ribambelle de légu...</p>
+							<p>Accompagné de sa ribambelle de légumes</p>
 						</div>
 						<h4>40€</h4>
 						<button type="button" class="check">
@@ -91,7 +91,7 @@
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
 						<div class="card__text">
 							<h3>Filet de Turbot</h3>
-							<p>Aux agrumes </p>
+							<p>Aux agrumes</p>
 						</div>
 						<h4>44€</h4>
 						<button type="button" class="check">
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif">
+				<div class="carte carte--modif carte--modif--3">
 					<p class="carte__heading">DESSERTS</p>
 					<hr />
 					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
