--- a/page_alafrancaise.html
+++ b/page_alafrancaise.html
@@ -4,15 +4,13 @@
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="sass/style.css" media="all"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/f03f98bc68.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>À la française</title>
 	</head>
 	
 	<body>
-		<div class="bloc-page"><!--En-tête du chacun des menus des restaurants-->
+		<div class="block-page"><!--En-tête du chacun des menus des restaurants-->
             <header class="entete"><!--Logo et flèche de retour-->
 				<a href="index.html" class="entete__fleche"><i class="fas fa-arrow-left"></i></a>
 				<p class="entete__logo">ohmyfood</p>
@@ -22,18 +20,18 @@
 				<img src="images_accueil/alafrancaise.jpg" alt="alafrancaise"/>
 			</span>
 
-			<section class="corps-page">
-				<div class="corps-page__heading">
-					<p class="corps-page__titre">À la française</p>
-			
+			<section class="corps">
+				<div class="corps__heading">
+					<p class="corps__titre">À la française</p>
+		
 					<span class="heart heart--modif"><i class="far fa-heart vide"></i></span>
 					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
-
 				</div>
-				<div class="carte carte--modif carte--modif--1">
-					<p class="carte__heading">ENTRÉES</p>
+
+				<div class="carte-menu carte-menu--1">
+					<p class="carte-menu__heading">ENTRÉES</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
+					<div class="carte-bouton--modif carte-bouton--modif--1">
 						<div class="card__text">
 							<h3>Tartare de poulpe acidulé</h3>
 							<p>Aux zestes d'orange</p>
@@ -43,7 +41,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--2">
 						<div class="card__text">
 							<h3>Velouté de légumes d'antan</h3>
 							<p>Carotte, panais, topinambour</p>
@@ -53,7 +51,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--3">
 						<div class="card__text">
 							<h3>Soupe à l'oignon</h3>
 							<p>Revisitée </p>
@@ -65,10 +63,10 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif carte--modif--2">
-					<p class="carte__heading">PLATS</p>
+				<div class="carte-menu carte-menu--2">
+					<p class="carte-menu__heading">PLATS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--1">
 						<div class="card__text">
 							<h3>Coquilles Saint-Jacques</h3>
 							<p>Accompagnées d'une purée de panais</p>
@@ -78,7 +76,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--2">
 						<div class="card__text">
 							<h3>Magret de canard</h3>
 							<p>Et parmentier de pommes de terre</p>
@@ -88,7 +86,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--3">
 						<div class="card__text">
 							<h3>Pigeonneau d'Ille-et-Vilaine</h3>
 							<p>Sur son lit de gnocchis aux légumes</p>
@@ -100,10 +98,10 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif carte--modif--3">
-					<p class="carte__heading">DESSERTS</p>
+				<div class="carte-menu carte-menu--3">
+					<p class="carte-menu__heading">DESSERTS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--1">
 						<div class="card__text">
 							<h3>Pétales de violettes glacés</h3>
 							<p>Et purée de noisettes</p>
@@ -113,7 +111,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--2">
 						<div class="card__text">
 							<h3>Fondant au chocolat</h3>
 							<p>Revisité</p>
@@ -123,7 +121,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--3">
 						<div class="card__text">
 							<h3>Millefeuille croustillant</h3>
 							<p>Myrtilles et pâté d'amande</p>
@@ -136,19 +134,19 @@
 				</div>
 
 				
-				<a href="#" role="button" class="bouton">						
-					<h4 class="bouton__text">Commander</h4>
+				<a href="#" role="button" class="bouton-menu">						
+					<h4>Commander</h4>
 				</a>
 
 				<footer class="pied"> <!--Le pied de page pour toutes les pages du site-->
-				<p class="pied__logo">ohmyfood</p>
-				<ul class="pied-nav">
-					<li><a href="#" class="pied-nav__lien"><i class="fas fa-utensils"></i> Proposer un restaurant </a></li>
-					<li><a href="#" class="pied-nav__lien"><i class="fas fa-hands-helping"></i>Devenir partenaire </a></li>
-					<li><a href="#" class="pied-nav__lien">Mentions légales </a></li>
-					<li><a href="mailto:contact@ohmyfoot.fr" class="pied-nav__lien">Contact</a></li>
-				</ul>
-			</footer>
+					<p class="pied__logo">ohmyfood</p>
+					<ul class="pied-nav">
+						<li><a href="#" class="pied-nav__lien"><i class="fas fa-utensils"></i> Proposer un restaurant </a></li>
+						<li><a href="#" class="pied-nav__lien"><i class="fas fa-hands-helping"></i>Devenir partenaire </a></li>
+						<li><a href="#" class="pied-nav__lien">Mentions légales </a></li>
+						<li><a href="mailto:contact@ohmyfoot.fr" class="pied-nav__lien">Contact</a></li>
+					</ul>
+				</footer>
 			</section>
 		</div>
 	</body>
