--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="sass/style.css" media="all"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f03f98bc68.js" crossorigin="anonymous"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Ohmyfood</title>
@@ -18,46 +16,45 @@
 			<div class="loader__2"></div>
 			<div class="loader__3"></div>
 		</div>
-		
-		<div class="block-page">
 
+		<div class="block-page">
 			<header class="entete"><!--Pour la page d'accueil-->
 				<p class="entete__logo">ohmyfood</p>
-			</header>
-
-			<div class="explorer"><!--Un peu d'information et navigation-->
-				<button onclick="geoloc()" class="explorer explorer__geo">
-					<span class="explorer__icon"><i class="explorer__icon fas fa-map-marker-alt"></i>
+				<button onclick="geoloc()" class="localisation">
+					<span class="localisation__icon"><i class="fas fa-map-marker-alt"></i>
 					Paris, Belleville</span>
 				</button>
-				<h2 class="explorer__titre">Réservez le menu qui <br />vous convient</h2>
-				<p class="explorer__text">Découvrez des restaurants d'exception,<br />séléctionnés par nos soins.</p>					
+			</header>
+
+			<div class="explorer">
+				<h2 class="explorer__titre">Réservez le menu qui vous convient</h2>
+				<p class="explorer__text">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>					
 				<a href="#restaurants" role="button" class="bouton">						
-					<h4 class="bouton__text">Explorer nos restaurants</h4>
+					<h4>Explorer nos restaurants</h4>
 				</a>
 			</div>
 
 			<section class="carte"><!--Petite guide pour l'utilisateur avec des boutons principales qui vont s'éclaicir sous le survol du curseur de la souris-->
 				<h2 class="carte__heading">Fonctionnement</h2>
-				<div class="carte__bouton">
-					<p class="carte__text">1</p>
-					<div class="carte__icon">
+				<div class="carte-bouton">
+					<p class="carte-bouton__text">1</p>
+					<div class="carte-bouton__icon">
 						<i class="fas fa-mobile-alt"></i>
 					</div>
 					<h4>Chosissez un restaurant</h4>
 				</div>
 
-				<div class="carte__bouton">
-					<p class="carte__text">2</p>
-					<div class="carte__icon">
+				<div class="carte-bouton">
+					<p class="carte-bouton__text">2</p>
+					<div class="carte-bouton__icon">
 						<i class="fas fa-list"></i>
 					</div>
 					<h4>Composez votre menu</h4>	
 				</div>
 
-				<div class="carte__bouton">
-					<p class="carte__text">3</p>
-					<div class="carte__icon">
+				<div class="carte-bouton">
+					<p class="carte-bouton__text">3</p>
+					<div class="carte-bouton__icon">
 						<i class="fas fa-store"></i>
 					</div>
 					<h4>Dégustez au restaurant</h4>	
