--- a/page_delices.html
+++ b/page_delices.html
@@ -4,15 +4,13 @@
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="sass/style.css" media="all"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/f03f98bc68.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Le délice des sens</title>
 	</head>
 	
 	<body>
-		<div class="bloc-page"><!--En-tête du chacun des menus des restaurants-->
+		<div class="block-page"><!--En-tête du chacun des menus des restaurants-->
             <header class="entete"><!--Logo et flèche de retour-->
 				<a href="index.html" class="entete__fleche"><i class="fas fa-arrow-left"></i></a>
 				<p class="entete__logo">ohmyfood</p>
@@ -22,18 +20,18 @@
 				<img src="images_accueil/delicesdesens.jpg" alt="lesdelicesdessens"/>
 			</span>
 
-			<section class="corps-page">
-				<div class="corps-page__heading">
-					<p class="corps-page__titre">Le délice des sens</p>
-			
+			<section class="corps">
+				<div class="corps__heading">
+					<p class="corps__titre">Le délice des sens</p>
+		
 					<span class="heart heart--modif"><i class="far fa-heart vide"></i></span>
 					<span class="heart heart--modif"><i class="fas fa-heart plain"></i></span>
-
 				</div>
-				<div class="carte carte--modif carte--modif--1">
-					<p class="carte__heading">ENTRÉES</p>
+
+				<div class="carte-menu carte-menu--1">
+					<p class="carte-menu__heading">ENTRÉES</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
+					<div class="carte-bouton--modif carte-bouton--modif--1">
 						<div class="card__text">
 							<h3>Tartare de thon</h3>
 							<p>Assaisonné au yuzu</p>
@@ -43,7 +41,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--2">
 						<div class="card__text">
 							<h3>Bouchée de homard croustillant</h3>
 							<p>Et sa farandole de petits légumes</p>
@@ -53,7 +51,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--3">
 						<div class="card__text">
 							<h3>Velouté de cèpes</h3>
 							<p>Aux truffe</p>
@@ -65,30 +63,30 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif carte--modif--2">
-					<p class="carte__heading">PLATS</p>
+				<div class="carte-menu carte-menu--2">
+					<p class="carte-menu__heading">PLATS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--special carte__bouton--modif--1">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--1">
 						<div class="card__text">
-							<h3>Poulet rôti aus herbes <br /> de provence</h3>
-							<p>Et sa crème de truffe</p>
+							<h3>Filet de boeuf aux herbes</h3>
+							<p>Accompagné de sa ribambelle de légumes</p>
 						</div>
 						<h4>40€</h4>
 						<button type="button" class="check">
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--2">
 						<div class="card__text">
-							<h3>Langouste rôtie</h3>
-							<p>Et ses légumes de saison</p>
+							<h3>Poulet rôti aus herbes de provence</h3>
+							<p>Et sa crème de truffe</p>
 						</div>
 						<h4>35€</h4>
 						<button type="button" class="check">
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--3">
 						<div class="card__text">
 							<h3>Côte de boeuf Angus</h3>
 							<p>Et sa puréé de panais</p>
@@ -100,10 +98,10 @@
 					</div>
 				</div>
 
-				<div class="carte carte--modif carte--modif--3">
-					<p class="carte__heading">DESSERTS</p>
+				<div class="carte-menu carte-menu--3">
+					<p class="carte-menu__heading">DESSERTS</p>
 					<hr />
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--1">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--1">
 						<div class="card__text">
 							<h3>Farandole de desserts</h3>
 							<p>Du chef</p>
@@ -113,7 +111,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--2">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--2">
 						<div class="card__text">
 							<h3>Crème brulée</h3>
 							<p>Revisitée</p>
@@ -123,7 +121,7 @@
 							<i class="fas fa-check-circle"></i>
 						</button>
 					</div>
-					<div class="carte__bouton carte__bouton--modif carte__bouton--modif--3">
+					<div class="carte-bouton carte-bouton--modif carte-bouton--modif--3">
 						<div class="card__text">
 							<h3>Tiramisu</h3>
 							<p>À la noisette</p>
@@ -136,19 +134,19 @@
 				</div>
 
 				
-				<a href="#" role="button" class="bouton">						
-					<h4 class="bouton__text">Commander</h4>
+				<a href="#" role="button" class="bouton-menu">						
+					<h4>Commander</h4>
 				</a>
 
 				<footer class="pied"> <!--Le pied de page pour toutes les pages du site-->
-				<p class="pied__logo">ohmyfood</p>
-				<ul class="pied-nav">
-					<li><a href="#" class="pied-nav__lien"><i class="fas fa-utensils"></i> Proposer un restaurant </a></li>
-					<li><a href="#" class="pied-nav__lien"><i class="fas fa-hands-helping"></i>Devenir partenaire </a></li>
-					<li><a href="#" class="pied-nav__lien">Mentions légales </a></li>
-					<li><a href="mailto:contact@ohmyfoot.fr" class="pied-nav__lien">Contact</a></li>
-				</ul>
-			</footer>
+					<p class="pied__logo">ohmyfood</p>
+					<ul class="pied-nav">
+						<li><a href="#" class="pied-nav__lien"><i class="fas fa-utensils"></i> Proposer un restaurant </a></li>
+						<li><a href="#" class="pied-nav__lien"><i class="fas fa-hands-helping"></i>Devenir partenaire </a></li>
+						<li><a href="#" class="pied-nav__lien">Mentions légales </a></li>
+						<li><a href="mailto:contact@ohmyfoot.fr" class="pied-nav__lien">Contact</a></li>
+					</ul>
+				</footer>
 			</section>
 		</div>
 	</body>
